@@ -431,7 +431,7 @@ public:
     BlockSymbol* block_symbol;
     MethodSymbol* next_method;
     Utf8LiteralValue* signature;
-    FileLocation *file_location;
+    FileLocation* file_location;
     unsigned max_block_depth;
 
     //
@@ -454,10 +454,11 @@ public:
         return name_symbol -> Utf8_literal
             ? name_symbol -> Utf8_literal -> length : 0;
     }
-    wchar_t *FileLoc()
+
+    wchar_t* FileLoc()
     {
-        return (wchar_t *) (file_location ? file_location -> location : NULL);
-    }	   
+        return (wchar_t*) (file_location ? file_location -> location : NULL);
+    }
     void SetLocation();
     MethodSymbol(const NameSymbol* name_symbol_)
         : declaration(NULL),
@@ -1370,7 +1371,7 @@ class VariableSymbol : public Symbol, public AccessFlags
 {
 public:
     AstVariableDeclarator* declarator;
-    FileLocation *file_location;
+    FileLocation* file_location;
     const NameSymbol* name_symbol;
     Symbol* owner;
     LiteralValue* initial_value;
@@ -1391,10 +1392,11 @@ public:
         return name_symbol -> Utf8_literal
             ? name_symbol -> Utf8_literal -> length : 0;
     }
-	wchar_t *FileLoc()
+
+    wchar_t* FileLoc()
     {
-        return (wchar_t *) (file_location ? file_location -> location : NULL);
-    }	
+        return (wchar_t*) (file_location ? file_location -> location : NULL);
+    }
     void SetExternalIdentity(const NameSymbol* external_name_symbol_)
     {
         external_name_symbol = external_name_symbol_;
